--- a/en/about.html
+++ b/en/about.html
@@ -44,7 +44,6 @@ Rebuild foundational technologies of computer system from scratch!</p>
 <a href="../images/ParaOS.png" target="_blank"><img src="../images/ParaOS.png" class="screenshots"><br>
 </div>
 <p><audio autoplay loop preload="none"><source src="../audio/life.mp3" type="audio/mpeg" /></audio></p>
-</div>
 
 
 </div>
@@ -52,12 +51,11 @@ Rebuild foundational technologies of computer system from scratch!</p>
 </section>
 </div>
 
-
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
  <footer class="inner">
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
-   <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
+   <span class="copyright"> © 2007-2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
       <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
