--- a/en/bc.html
+++ b/en/bc.html
@@ -73,9 +73,10 @@
 <p><a href="../images/bc/3.png" target="_blank"><img src="../images/bc/3.png" class="screenimg"></a></p>
 <p><a href="../images/bc/4.png" target="_blank"><img src="../images/bc/4.png" class="screenimg"></a></p>
 <p><a href="../images/bc/5.png" target="_blank"><img src="../images/bc/5.png" class="screenimg"></a></p>
-</div>
-</div>
 <p><br></p>
+
+</div>
+</div>
 </section>
 </div>
 
@@ -83,7 +84,7 @@
 <div id="footer_wrap" class="outer">
  <footer class="inner">
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
-   <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
+   <span class="copyright"> © 2007-2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
       <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
