--- a/en/be900.html
+++ b/en/be900.html
@@ -71,8 +71,10 @@
 <h2>Keywords:</h2>
 <p>Spoken English, Business English, Pronunciation, Voice repeater, Speaking, Foreign trade<br>
 商務口語, 英語, 口語, 語音复讀機, 發音, 商貿 ,單詞, 英語教學, 經貿, 外貿,  商務英語, 900句。</p>
-</div>
 <p><br></p>
+
+</div>
+</div>
 </section>
 </div>
 
@@ -80,7 +82,7 @@
 <div id="footer_wrap" class="outer">
  <footer class="inner">
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
-   <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
+   <span class="copyright"> © 2007-2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
       <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
@@ -88,3 +90,4 @@
  </footer>
 </div>
 </body></html>
+
