--- a/en/cantonese.html
+++ b/en/cantonese.html
@@ -75,9 +75,10 @@ Grammar lessons includes almost all of the core aspects of Cantonese.<br>
 
 <h2>Resources for learning Cantonese</h2>
 <p><a href="http://www.sevenuc.com/en/resources.html"> → Materials of book and audio</a>.</p>
-</div>
-
 <p><br></p>
+
+</div>
+</div>
 </section>
 </div>
 
@@ -85,7 +86,7 @@ Grammar lessons includes almost all of the core aspects of Cantonese.<br>
 <div id="footer_wrap" class="outer">
  <footer class="inner">
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
-   <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
+   <span class="copyright"> © 2007-2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
       <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
