--- a/en/iq.html
+++ b/en/iq.html
@@ -78,9 +78,10 @@ F: Learn &amp; abstract reasoning.<br>
 <p><a href="../images/iq/1.png" target="_blank"><img src="../images/iq/1.png" class="screenshot"></a></p>
 <p><a href="../images/iq/2.png" target="_blank"><img src="../images/iq/2.png" class="screenshot"></a></p>
 <p><a href="../images/iq/3.png" target="_blank"><img src="../images/iq/3.png" class="screenshot"></a></p>
-</div>
-</div>
 <p><br></p>
+
+</div>
+</div>
 </section>
 </div>
 
@@ -88,7 +89,7 @@ F: Learn &amp; abstract reasoning.<br>
 <div id="footer_wrap" class="outer">
  <footer class="inner">
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
-   <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
+   <span class="copyright"> © 2007-2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
       <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
@@ -96,3 +97,4 @@ F: Learn &amp; abstract reasoning.<br>
  </footer>
 </div>
 </body></html>
+
