--- a/en/powerreader.html
+++ b/en/powerreader.html
@@ -129,9 +129,10 @@
 </ul>
 
 <p><lt>Cross border, fast share files between Desktop, Server, Mobile phone and iOS device directly without boring things.</lt></p>
+<p><br></p>
 
 </div>
-<p><br></p>
+</div>
 </section>
 </div>
 
@@ -139,7 +140,7 @@
 <div id="footer_wrap" class="outer">
  <footer class="inner">
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
-   <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
+   <span class="copyright"> © 2007-2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
       <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
