--- a/en/proverbs.html
+++ b/en/proverbs.html
@@ -717,7 +717,7 @@ Hong Kong, Macau, Macao, Canton, Cantonese, Guangzhou, Chinese, China, dictionar
 <div id="footer_wrap" class="outer">
  <footer class="inner">
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
-   <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
+   <span class="copyright"> © 2007-2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
       <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
@@ -725,3 +725,4 @@ Hong Kong, Macau, Macao, Canton, Cantonese, Guangzhou, Chinese, China, dictionar
  </footer>
 </div>
 </body></html>
+
