--- a/403.html
+++ b/403.html
@@ -31,6 +31,8 @@
 <section id="main_content" class="inner">
 <!--div style="height:100vh; width:vw;"-->
 <p>Access to this resource on the server is denied!</p>
+
+</div>
 </div>
 </section>
 </div>
@@ -39,7 +41,7 @@
 <div id="footer_wrap" class="outer">
  <footer class="inner">
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
-   <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
+   <span class="copyright"> © 2007-2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
       <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
