--- a/404.html
+++ b/404.html
@@ -39,6 +39,8 @@ The page you're looking for is no longer available.<br>
 
 
 <!--div style="height:100vh; width:vw;"></div-->
+</div>
+</div>
 </section>
 </div>
 
@@ -46,7 +48,7 @@ The page you're looking for is no longer available.<br>
 <div id="footer_wrap" class="outer">
  <footer class="inner">
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
-   <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
+   <span class="copyright"> © 2007-2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
       <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
