--- a/en/anida.html
+++ b/en/anida.html
@@ -211,22 +211,20 @@ Mr. 陳百強/Danny Chan Pak-keung.<br>
 <p><b>Small! Fast! </b></span><br> 
    <b>Enjoy ultra small audio file now!</b>
 </p>
-
-
-</div>
-</div>
 <p><br></p>
+<p><audio autoplay loop preload="none"><source src="../audio/life.mp3" type="audio/mpeg" /></audio></p>
 
+</div>
+</div>
 </section>
 </div>
 
-<p><audio autoplay loop preload="none"><source src="../audio/life.mp3" type="audio/mpeg" /></audio></p>
 
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
  <footer class="inner">
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
-   <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
+   <span class="copyright"> © 2007-2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
       <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
