--- a/en/beak.html
+++ b/en/beak.html
@@ -103,7 +103,7 @@ Platform: macOS Sierra</p>
 <div id="footer_wrap" class="outer">
  <footer class="inner">
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
-   <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
+   <span class="copyright"> © 2007-2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
       <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
@@ -111,3 +111,4 @@ Platform: macOS Sierra</p>
  </footer>
 </div>
 </body></html>
+
