--- a/en/codeeditor.html
+++ b/en/codeeditor.html
@@ -34,8 +34,10 @@
 <h2></h2>
 <p>iCodeEditor has been renamed to iPowerReader. <br>
 Please forward to there:<a href="powerreader.html"> powerreader.html</a></p>
-</div>
 <p><br></p>
+
+</div>
+</div>
 </section>
 </div>
 
@@ -43,7 +45,7 @@ Please forward to there:<a href="powerreader.html"> powerreader.html</a></p>
 <div id="footer_wrap" class="outer">
  <footer class="inner">
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
-   <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
+   <span class="copyright"> © 2007-2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
       <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
