--- a/en/train.html
+++ b/en/train.html
@@ -52,10 +52,10 @@
 <p><a href="../images/train/402.png" target="_blank"><img src="../images/train/402.png" class="screenshots"></a></p>
 <p><a href="../images/train/403.png" target="_blank"><img src="../images/train/403.png" class="screenshots"></a></p>
 <p><a href="../images/train/404.png" target="_blank"><img src="../images/train/404.png" class="screenshots"></a></p>
-</div>
-</div>
-
 <p><br></p>
+
+</div>
+</div>
 </section>
 </div>
 
@@ -63,7 +63,7 @@
 <div id="footer_wrap" class="outer">
  <footer class="inner">
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
-   <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
+   <span class="copyright"> © 2007-2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
       <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
