--- a/en/uftp.html
+++ b/en/uftp.html
@@ -76,9 +76,10 @@ click the folder icon and then select a folder that you want to be used as the r
 </p></div>
 
 This small util is really useful when you want quickly move files between Mac and other devices.
+<p><br></p>
 
 </div>
-<p><br></p>
+</div>
 </section>
 </div>
 
@@ -86,7 +87,7 @@ This small util is really useful when you want quickly move files between Mac an
 <div id="footer_wrap" class="outer">
  <footer class="inner">
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
-   <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
+   <span class="copyright"> © 2007-2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
       <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
