--- a/index.html
+++ b/index.html
@@ -49,21 +49,19 @@
 <source src="http://www.sevenuc.com/audio/ripples.ogg" type="audio/ogg">
 </audio></p>
 
-
 </div>
 </div>
 </section>
 </div>
 
-
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
  <footer class="inner">
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
-   <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
+   <span class="copyright"> © 2007-2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
-      <a href="http://www.sevenuc.com/en/artworks.html"> Artworks </a>|
+      <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
       <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
  </footer>
 </div>
