--- a/en/speare.html
+++ b/en/speare.html
@@ -45,7 +45,7 @@ lt {color:#007f00;}
 <img src="../images/speare/logo.png" style="height: 110px;width:auto" /><br>
 <!--h2>Speare Code Editor<br><em> Version 1.2.74 </em><br><em class="green">The free small IDE for scripting languages.</em></h2-->
 <div><pre class="green">
-Speare v1.2.80
+Speare v1.2.82
 The free small IDE for scripting languages.
 (c) 2020 http://www.sevenuc.com
 </pre></div>
@@ -243,6 +243,14 @@ b. Use shortcut key "Option + Shift + I"  to do the work.
 <h2>Syntax highlighting without file extension name</h2>
 <p>Speare can recognise the programming language of a text file without file extension name by <a href="http://en.wikipedia.org/wiki/Shebang_(Unix)"> Shebang</a>, i.e, the first line of the text file. The configure file for this function is <span class="green">"/Applications/Speare.app/Contents/Resources/shebang.json"</span>, the default language includes Shell, Ruby, Python, Perl, Lua, PHP and Tcl, you can edit it to support more programming languages directly.
 </p>
+
+<h2>File Encoding</h2>
+<p>
+1. See file encoding. Right click current editing file → the text encoding of the current file will be displayed in the prompt menu. <br>
+2. Open file or folder with self-defined encoding.  → Open Using Encoding → select an encoding  →  select a folder or file.<br>
+3, Save file with self-defined encoding.  → Save Using Encoding →  select an encoding  →  select a folder. You can use this function to convert file encoding conveniently.<br>
+</p>
+
 
 <h2>Colour Picker</h2>
 <p>Right click current editing file → select "Colour Picker" on the prompt menu, then a HTML colour will be inserted when pick a colour.</p>
