small changes for speare

--- a/en/speare.html
+++ b/en/speare.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:title" content="Speare, an ultra lightweight code editor and a small IDE that provides debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.">
+<meta property="og:title" content="Speare, the free small IDE for scripting languages.">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
 <meta property="og:image" content="http://www.sevenuc.com/favicon.ico">
@@ -25,7 +25,7 @@
 ltab { margin-left: 20px; }
 lt {color:#007f00;}
 </style>
-<title> Speare Code Editor</title>
+<title>Speare - The free small IDE for scripting languages</title>
 </head>
 <body>
 
