--- a/en/debugger.html
+++ b/en/debugger.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:title" content="Speare, an ultra lightweight code editor and a small IDE that provides debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.">
+<meta property="og:title" content="Speare, the free small IDE for scripting languages.">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
 <meta property="og:image" content="http://www.sevenuc.com/favicon.ico">
@@ -20,7 +20,7 @@
 /*.green {color: #007f00;font-weight: bold;}*/
 .treasure { color: rgba(0, 0, 0, 0.7); font-style: italic; font-weight: bold; background: none; }
 </style>
-<title>Debugging code with Speare Code Editor</title>
+<title>Speare - The free small IDE for scripting languages</title>
 </head>
 <body>
 
