--- a/en/index.html
+++ b/en/index.html
@@ -36,12 +36,27 @@
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
 
-
-<div style="height:100vh; width:vw;">
-
 <div class="smallscreen">
 
-<a href="http://www.sevenuc.com/images/invisible-wall.png" target="_blank"><img src="http://www.sevenuc.com/images/invisible-wall.png" style="float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;max-width:100%;">
+<div><pre class="green">
+   ____
+  / __/ __  ___ ___  ___ ___
+  _\ \/ _ \/ -_) _ `/ __/ -_)
+ /___/ .__/\__/\_,_/_/  \__/
+    /_/
+Speare Code Editor v1.2.83
+The free small IDE for scripting languages.
+(c) 2020 http://www.sevenuc.com
+</pre></div>
+
+<p><a href="http://www.sevenuc.com/en/speare.html" target="_blank"><img src="http://www.sevenuc.com/images/speare/logo.png" style="float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;"> <a href="http://www.sevenuc.com/en/speare.html">Speare code editor</a> is a small, free and friendly code editor, and a really ultra light IDE (less than 7MB). You can use it to edit all kinds of text file, programming and debugging with almost all common programming languages. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements and easily to add a new programming language in it. Speare code editor includes <a href="http://www.sevenuc.com/en/debugger.html" target="_blank">builtin debugging environment</a> for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give you complete freedom to control and customise a debugging environment for any programming language.
+</p>
+
+
+<p><br><br><br><br><br><br><br></p>
+
+
+<!--div style="height:100vh; width:vw;"-->
 
 <!--p><audio autoplay loop preload="none"><source src="http://www.sevenuc.com/audio/bamboo.mp3" type="audio/mpeg" /></audio></p-->
 <p><audio autoplay loop preload="none" id="myaudio">
@@ -49,12 +64,10 @@
 <source src="http://www.sevenuc.com/audio/ripples.ogg" type="audio/ogg">
 </audio></p>
 
-
 </div>
 </div>
 </section>
 </div>
-
 
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
