--- a/en/speare.html
+++ b/en/speare.html
@@ -45,7 +45,7 @@ lt {color:#007f00;}
 <img src="../images/speare/logo.png" style="height: 110px;width:auto" /><br>
 <!--h2>Speare Code Editor<br><em> Version 1.2.74 </em><br><em class="green">The free small IDE for scripting languages.</em></h2-->
 <div><pre class="green">
-Speare v1.2.83
+Speare v1.2.84
 The free small IDE for scripting languages.
 (c) 2020 http://www.sevenuc.com
 </pre></div>
@@ -203,6 +203,10 @@ b. Click <img src="../images/speare/search.png" class="button" /> search button 
 <li><b>Searching items in left side Treeview:</b><br>Input the item name (or prefix or suffix, or contained word) in the search field which located in the bottom of the left side Treeview and then enter "Return" key, click up and down arrow right side of the search field to iterate items.</li></ol></p>
 <p><ltab><b>Brief &amp; History</b>: each search result has brief of the source line and all be classified, and the history of search words remembered automatically, click the down arrow of the search field will allow to select the searched items in history.</ltab></p>
 
+<h2>Show Search Results</h2>
+<p>Click the <img src="../images/speare/doclines.png" class="button" /> "Results" button on the toolbar then the left side Treeview can be switched to the view of "searched results".</p>
+
+
 <h2>Tab Selection and Dragging</h2>
 <p><b>Speare</b> use tabs to manage multiple opened files on the right side, continuously click on the leftmost or rightmost tab can quickly scroll tabs to left side or right side so that opened files can be quickly switched. Dragging special tabs together will also can help simultaneously editing multiple files.<br><br>
 <em class="green">Tips: click tab can fast select the node of left side Treeview when it loaded or reloaded end.</em><br>
@@ -213,7 +217,7 @@ b. Click <img src="../images/speare/search.png" class="button" /> search button 
 Click the item in the left side Treeview and input a new file name just like in Finder, and then click the left side icon to end editing.<br><br>
 <b>2. File Save</b><br>
 a). Speare can save file automatically whenever it be edited but the temporary "Untitled files" will be asked to save when quit the app or load a .spp file, because load a .spp file will remove current project.<br><br>
-<i>In addition, Speare will change the icon colour of the item in the left side Treeview to indicate that it has been edited  whenever it be edited, and will restore to default state when click the "Save" or "Save All" button on the toolbar.</i><br><br>
+<i>In addition, Speare will change the icon colour of the item in the left side Treeview to indicate that it has been edited  whenever it be edited, and will restore to default state when <span class="strike">click the "Save" or "Save All" button on the toolbar.</span> click the menu: File  → Save or Save All. </i><br><br>
 b). Speare can save file with user selected text encoding and compatible with Windows line endings (i.e "\r\n").
 </p>
 
@@ -245,8 +249,7 @@ b. Use shortcut key "Option + Shift + I"  to do the work.
 </p>
 
 <h2>File Encoding</h2>
-<p>
-1. See file encoding. Right click current editing file → the text encoding of the current file will be displayed in the prompt menu. <br>
+<p>1. See file encoding. Right click current editing file → the text encoding of the current file will be displayed in the prompt menu. <br>
 2. Open file or folder with self-defined encoding.  → Open Using Encoding → select an encoding  →  select a folder or file.<br>
 3, Save file with self-defined encoding.  → Save Using Encoding →  select an encoding  →  select a folder. You can use this function to convert file encoding conveniently.<br>
 </p>
