small changes of speare

--- a/en/speare.html
+++ b/en/speare.html
@@ -248,6 +248,13 @@ b. Use shortcut key "Option + Shift + I"  to do the work.
 <p>Speare can recognise the programming language of a text file without file extension name by <a href="http://en.wikipedia.org/wiki/Shebang_(Unix)"> Shebang</a>, i.e, the first line of the text file. The configure file for this function is <span class="green">"/Applications/Speare.app/Contents/Resources/shebang.json"</span>, the default language includes Shell, Ruby, Python, Perl, Lua, PHP and Tcl, you can edit it to support more programming languages directly.
 </p>
 
+<h2>Edit Invisible Characters</h2>
+<p>a. Click menu: Text  → Spaces to Tabs.<br>
+b. Click menu: Text  → Tabs to Spaces.<br>
+c. Click menu: View  → Show Invisible Characters.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;Edit tabs and space and then Click menu: View  → Hide Invisible Characters.<br>
+</p>
+
 <h2>File Encoding</h2>
 <p>1. See file encoding. Right click current editing file → the text encoding of the current file will be displayed in the prompt menu. <br>
 2. Open file or folder with self-defined encoding.  → Open Using Encoding → select an encoding  →  select a folder or file.<br>
