--- a/en/terms.html
+++ b/en/terms.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:title" content="Original artworks creating, music, painting, poem and shodo (calligraphy).">
+<meta property="og:title" content="The next generation intelligent microcomputer.">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
 <meta property="og:image" content="http://www.sevenuc.com/favicon.ico">
@@ -9,19 +9,19 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
-<meta name="description" content="Original artworks creating, music, painting, poem and shodo (calligraphy).">
-<meta name="service" content="Independent singer songwriter, independent personal music publishing">
+<meta name="description" content="The greatest breakthroughs since the wheel, a series of revolutionary products comes along that will change almost everything.">
+<meta name="service" content="Product development and independent consulting services">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="原創音樂,オリジナル音楽,original music,原創藝術,オリジナルアート,original artworks,歌詞の作成,曲の作成,音楽の作成,Lyric creation,Song creation,Music creation,Shodo,Calligraphy,Kanji Artworks,Independent Singer Songwriter">
+<meta name="keywords" content="Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
-<title> Copyright Notice </title>
+<title> Trademarks </title>
 </head>
 <body>
 
 <!-- HEADER -->
 <div id="header_wrap" class="outer">
     <header class="inner">
-      <h1 id="project_title">Copyright Notice</h1>
+      <h1 id="project_title">Trademarks</h1>
       <h2 id="project_tagline"></h2>
     </header>
 </div>
@@ -29,32 +29,28 @@
 <!-- MAIN CONTENT -->
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
+<p>The software developed by Sevenuc Consulting is usually cross-platform and running on multiple devices. Our use of all registered trademarks of third parties, as well as their logos, is subject to the permissions of each one of these third parties.</p>
 
-<p>This website includes my private artworks, my original creative artworks, including music, painting, poem and shodo (calligraph), all of them are copyrighted.</p>
-
-<p>ここで公開されているアートワークは、関連する知的財産権によって保護されています。 著者自身の同意と書面による許可なしに、個人または組織は、リメイク（編集、変換、盗作）、引用、転載、営利事業での使用など、著者の個人の権利を侵害する行為を行うことはできません 活動、犯罪者は関連する法的責任について調査されます。</p>
-
-<p>此處發布的作品受相關智慧財產權和知識產權保護，未經作者本人同意和書面授權，任何組織或個人不得有侵害作者本人私人權益之任何行為，包括但不限於重製(編輯、轉換、翻唱、抄襲)、引用、轉載和用於任何以盈利為目的的商業行為，違者將追究相關法律責任。</p>
-
-<p>The artworks published here are protected by relevant intellectual property rights. Without the author’s own agreement and written permission, any individual or organisation can not have any actions that infringe the author’s personal rights, including but not limited to remake (editing, conversion, plagiarism), quoted, reprinted and used for any profit-making business activities, offenders will be investigated for related legal responsibilities.
-</p>
-
-
+<ol><li>Apple and the Apple logo are trademarks of Apple Inc., registered in the U.S. and other countries. iPhone is a trademark of Apple Inc.</li>
+<li>Android is a trademark of Google Inc. Use of this trademark is subject to Google Permissions.</li>
+<li>BlackBerry®, RIM®, Research In Motion®, and related trademarks, names and logos are the property of Research In Motion Limited.</li>
+<li>Windows Phone and its logo is a registered trademark of Microsoft Inc.</li>
+<li>Nokia, Nokia logo, S40, S60 and related trademarks are trademarks or registered trademarks of Nokia Corporation.</li>
+<li>Bada, Bada logo, Samsung, Samsung logo, Samsung Galaxy and related trademarks are trademarks or registered trademarks of Samsung Electronics Co.,Ltd.</li>
+</ol>
 <!--div style="height:100vh; width:vw;"></div-->
-</div>
-</div>
 </section>
 </div>
 
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
  <footer class="inner">
-   <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
-   <span class="copyright"> © 2007-2020 Sevenuc Consulting <br>All rights reserved.</span>
-      <a href="http://www.sevenuc.com/en/about.html"> About </a>|
-      <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
-      <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
-      <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
+   <a href="http://sevenuc.com"><img src="http://sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
+   <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
+      <a href="http://sevenuc.com/en/about.html"> About </a>|
+      <a href="http://sevenuc.com/en/service.html"> Services </a>|
+      <a href="http://sevenuc.com/en/apps.html"> Apps </a>|
+      <a href="http://sevenuc.com/en/contact.html"> Contact </a></p></span>
  </footer>
 </div>
 </body></html>
