--- a/en/ai.html
+++ b/en/ai.html
@@ -15,8 +15,6 @@
 <meta name="keywords" content="Chinese text segmentation,Chinese Word segmentation,Chinese Text Tokenisation,Chinese Linguistics,Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Chinese word segmentation,Morphological Analyzer,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
 <style type="text/css">
-.red {color:#cce619;}
-.screen {width:320px;height:auto;max-width:100%;}
 </style>
 <title> Chinese word segmentation </title>
 </head>
@@ -78,7 +76,7 @@ Options:
 
 <p><b>2. About artificial intelligence</b>, you might be interested in the ancient strategy game which dates back more than 2000 years. The Chinese Chess, it contains the ancient oriental profound philosophy and wisdom, that results it very IQ challenge and very attractive unique style than any game you've been played, you can challenge it in your whole life, and it's suitable for both children and parents. <a href="https://chengdu.github.io/Chinese-Chess-for-Beginners/index.html">Chinese Chess for Beginners</a> explains the basic rules of the game clearly and in detail so that you can start playing right away. You can download the funny app from App store and enjoy it.<br><br>
 
-<a class="appstore_download_link" href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1293135726&mt=8">app store</a>
+<a href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1293135726&mt=8" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" ></a>
 </p>
 <p><br></p>
 <p><br></p>
