--- a/en/beak.html
+++ b/en/beak.html
@@ -16,6 +16,8 @@
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
 <style type="text/css">
 .none {  padding:0;  margin: 0; }
+table { border: 1px solid #9fa8b5; margin-bottom: 10px; text-align: left; border-spacing: 0; border-collapse: collapse;}
+table th, td { max-width:200px; text-align: left; padding:10px; border: 1px solid #9fa8b5; vertical-align:top;}
 </style>
 
 <title> Beak </title>
