--- a/en/resources.html
+++ b/en/resources.html
@@ -17,6 +17,8 @@
 <script src="../js/twitter.js"></script>
 <style type="text/css">
 .treasure { margin-top:-14px;color: rgba(255, 0, 255, 0.5); font-size: 11px;font-style: italic; font-weight: bold; background: none; }
+table { border: 1px solid #9fa8b5; margin-bottom: 10px; text-align: left; border-spacing: 0; border-collapse: collapse;}
+table th, td { max-width:480px; text-align: left; padding:10px; border: 1px solid #9fa8b5; vertical-align:top;}
 </style>
 <title> Resources for Learning Cantonese </title>
 </head>
