--- a/en/service.html
+++ b/en/service.html
@@ -32,7 +32,7 @@
 
 
 <div style="height:100vh; width:vw;">
-<p><a href="../images/wave.png" target="_blank"><img src="../images/wave.png" style="height:220px;width:auto;float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;max-width:100%;"></a>
+<p><a href="../images/wave.png" target="_blank"><img src="../images/wave.png" style="height:220px;width:auto;float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;max-width:100%;border: 1px solid #9fa8b5;"></a>
 </p>
 <p></p>
 <p><audio autoplay loop preload="none"><source src="../audio/life.mp3" type="audio/mpeg" /></audio></p>
