--- a/en/train.html
+++ b/en/train.html
@@ -43,7 +43,7 @@
 <p><b>Small Train</b> is a very special music game designed to suitable for children and parents with IQ challenging based on simple rules. In a lot of sand, the pearl is little and not always shine, but once you find it you will ever put it down. Wonderful music can comfort the brain, appease the human mind, release the inner joy, the body and mind will be relaxed and feel comfortable in a relaxed rhythm and atmosphere. For children, wonderful music influence can make children happy and smarter.<br>
 </p>
 <p>Download the funny music game from App Store: <br><br>
-<a class="appstore_download_link" href="https://itunes.apple.com/us/app/small-train/id858636040?mt=8"></a><br></p>
+<a href="https://itunes.apple.com/us/app/small-train/id858636040?mt=8" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" ></a><br></p>
 <p><br><br></p>
 
 <h2>Screenshots:</h2>
