--- a/en/debugger.html
+++ b/en/debugger.html
@@ -74,13 +74,14 @@ The free small IDE for scripting languages.
 <br>
 </p>
 
-<p><a href="https://apps.apple.com/us/app/speare-pro/id1477773605?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br>
+<p><a href="https://apps.apple.com/us/app/speare-pro/id1477773605?mt=12" target="_blank" class="appstore_download_link">
+<img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br>
 <p>If you can't open the link above, please launch App Store and found <lt>"Speare pro"</lt> by searching.</p>
 <p><span><a href="../images/speare/4.png" target="_blank"><img src="../images/speare/4.png" style="width:480px;height:auto;"/></a></span><br>
 <span><a href="../images/speare/5.png" target="_blank"><img src="../images/speare/5.png" style="width:480px;height:auto;"/></a></span><br>
 <span><a href="../images/speare/6.png" target="_blank"><img src="../images/speare/6.png" style="width:480px;height:auto;"/></a></span><br>
-<span><a href="../images/speare/7.png" target="_blank"><img src="../images/speare/7.png" style="width:480px;height:auto;"/></a></span><br>
-<span><a href="../images/speare/10.png" target="_blank"><img src="../images/speare/10.png" style="width:480px;height:auto;"/></a></span>
+<!--span><a href="../images/speare/7.png" target="_blank"><img src="../images/speare/7.png" style="width:480px;height:auto;"/></a></span><br-->
+<!--span><a href="../images/speare/10.png" target="_blank"><img src="../images/speare/10.png" style="width:480px;height:auto;"/></a></span-->
 </p>
 
 
