--- a/en/speare.html
+++ b/en/speare.html
@@ -110,10 +110,10 @@ The free small IDE for scripting languages.
 
 <h2>Screenshot</h2>
 <a href="../images/speare/0.png" target="_blank"><img src="../images/speare/0.png" class="screenshots"/></a><br>
-<a href="../images/speare/9.png" target="_blank"><img src="../images/speare/9.png" class="screenshots"/></a><br>
+<!--a href="../images/speare/9.png" target="_blank"><img src="../images/speare/9.png" class="screenshots"/></a><br-->
 <a href="../images/speare/1.png" target="_blank"><img src="../images/speare/1.png" class="screenshots"/></a><br>
 <a href="../images/speare/2.png" target="_blank"><img src="../images/speare/2.png" class="screenshots"/></a><br>
-<a href="../images/speare/3.png" target="_blank"><img src="../images/speare/3.png" class="screenshots"/></a><br>
+<!--a href="../images/speare/3.png" target="_blank"><img src="../images/speare/3.png" class="screenshots"/></a><br-->
 <br>
 
 
