--- a/en/anida.html
+++ b/en/anida.html
@@ -34,7 +34,7 @@ table td { max-width:200px; text-align: left; padding:10px; border: 1px solid #9
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
 <p><div id="player1" class="aplayer" style="display:none;"></div></p>
-<div class="smallscreen">
+<div class="mainscreen">
 <h2><img src="../images/Anida/Anida_logo.png" style="width:auto;height:170px;"></h2>
 <p><i><b>Small! Fast! It's the audio artificial intelligence era!</b></i><br><br>
 <i><b>Anida</b> is an audio codec and audio compression format developed by Sevenuc Consulting. It was designed to reduce audio data size to reduce transfer time and save disk space. The Anida engine was designed as a KAM (Kilobytes Audio Machine) for deeply embedded system running on small devices and has a small footprint, it promised to compress common music files with kilobytes as opposed to megabytes.</i></p>
