--- a/en/be900.html
+++ b/en/be900.html
@@ -32,7 +32,7 @@
 <section id="main_content" class="inner">
 
 
-<div class="smallscreen">
+<div class="mainscreen">
 
 <!--video class="videobox" id="mainVideo" width="318" height="476" controls autoplay>
 <source src="/videos/chinese.mp4" type="video/mp4">
