--- a/en/beak.html
+++ b/en/beak.html
@@ -37,7 +37,7 @@ table th, td { max-width:200px; text-align: left; padding:10px; border: 1px soli
 <section id="main_content" class="inner">
 
 
-<div class="smallscreen">
+<div class="mainscreen">
 <img src="../images/beak/beak_logo.png" style="width: 120px;" /><br>
 <h2>Beak <br><em>Version 1.1 </em></h2>
 
@@ -87,7 +87,7 @@ Platform: macOS Sierra</p>
 
 <p class="green">Excellent software should be elegant, reliable and small. Especially, building small software is very important for deeply-embedded systems. Lovingly crafting software as elegant and small as possible is the real programmer's cultivation.</p>
 
-<p><a href="https://itunes.apple.com/us/app/beak/id1337625630?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" > </a></p><br><br><br>
+<p><a href="https://itunes.apple.com/us/app/beak/id1337625630?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" > </a></p><br><br><br><br><br><br>
 <p>If you can't open the link above, please launch App Store and found Beak by searching.</p>
 <br>
 
