--- a/en/codeeditor.html
+++ b/en/codeeditor.html
@@ -30,7 +30,7 @@
 <!-- MAIN CONTENT -->
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
-<div class="smallscreen">
+<div class="mainscreen">
 <h2></h2>
 <p>iCodeEditor has been renamed to iPowerReader. <br>
 Please forward to there:<a href="powerreader.html"> powerreader.html</a></p>
