--- a/en/contact.html
+++ b/en/contact.html
@@ -36,13 +36,16 @@
 
 
 
-<div style="height:100vh; width:vw;">
+<!--div style="height:100vh; width:vw;"-->
 <ul class="nonelist">
 <!--li><img src="../images/g+.jpg" class="smallimg" />&nbsp;&nbsp;<a href="javascript:void(0);">Google+</a></li-->
 <!--li><img src="../images/skype.png" class="smallimg" />&nbsp;&nbsp; Skype: <a href="javascript:void(0);">sevenuc</a></li-->
 <li><img src="../images/email.png" class="smallimg" />&nbsp;&nbsp; Email: <a href="mailto:info@sevenuc.com">info@sevenuc.com</a></li></ul>
 <p style="display:none;">Please directly connect me via Twitter or <br> message me via email.</p>
 </div>
+
+<p><br><br><br><br><br><br><br><br><br><br><br><br></p>
+<p><br><br><br><br><br><br><br><br><br><br><br><br></p>
 
 <p><audio autoplay loop preload="none"><source src="../audio/life.mp3" type="audio/mpeg" /></audio></p>
 
