--- a/en/debugger.html
+++ b/en/debugger.html
@@ -17,7 +17,6 @@
 <style type="text/css">
 .logo {  height:42px;  width: auto; }
 .none {  padding:0;  margin: 0; }
-/*.green {color: #007f00;font-weight: bold;}*/
 .treasure { color: rgba(0, 0, 0, 0.7); font-style: italic; font-weight: bold; background: none; }
 </style>
 <title>Speare - The free small IDE for scripting languages</title>
@@ -35,7 +34,7 @@
 <!-- MAIN CONTENT -->
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
-<div class="smallscreen">
+<div class="mainscreen">
 
 <!--
 <img src="../images/speare/logo.png" style="height: 110px;width:auto" /><br>
