--- a/en/guard.html
+++ b/en/guard.html
@@ -44,7 +44,7 @@
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
 
-<div class="smallscreen">
+<div class="mainscreen">
 <img src="../images/guard/guard7_logo.png" style="width: 120px;" /><br>
 <h2>Guard7<br><em>Version 1.1</em></h2>
 <p><em class="green">Protect your confidential information easy.</em><br></p>
@@ -52,7 +52,7 @@
 <p><b>Guard7</b> is a general purpose cryptography tool that used to encrypt or decrypt email, file, sign and verify files. It is the graphical frontend for the GNU Privacy Guard (GnuPG or GPG, <a href="http://www.gnupg.org">http://www.gnupg.org</a>) on macOS (previously Mac OS X) with additional features. Guard7 is an encryption and decryption system based on industry standard that can ensure the complete security of business negotiations or personal messages. It was developed to make the daily work with GnuPG on <a href="https://www.apple.com/mac/">macOS</a> easy and simple. </p>
 
 <p class="greenbig">It's free!</p>
-<p><a href="https://itunes.apple.com/us/app/guard7/id1348667059?ls=1&mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br>
+<p><a href="https://itunes.apple.com/us/app/guard7/id1348667059?ls=1&mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br><br>
 <p><em>If you can't open the link above, please launch App Store and found Guard7 by searching.<br>
 Please kindly donate the author by purchasing other apps developed by the author or commend this app on your blog or rate this app so that helping other people can more easily find it.</em></p>
 
