--- a/en/iq.html
+++ b/en/iq.html
@@ -31,7 +31,7 @@
 <section id="main_content" class="inner">
 
 
-<div class="smallscreen">
+<div class="mainscreen">
 <a href="https://itunes.apple.com/us/app/mr-iq/id1302783378?ls=1&mt=8">
 <img src="../images/IQ_Test.png" style="height:151px;width:auto; margin-bottom:0.5em;"></a><br>
 <p>
