--- a/en/littlefox.html
+++ b/en/littlefox.html
@@ -47,7 +47,7 @@ table td { max-width:200px; text-align: center; padding:10px; border: 1px solid 
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
 
-<div class="smallscreen">
+<div class="mainscreen">
 <img src="../images/littlefox/logo.png" style="width: 120px;" /><br>
 <h2> LittleFox <br><em> Version 1.5.14 </em></h2>
 
@@ -67,7 +67,7 @@ table td { max-width:200px; text-align: center; padding:10px; border: 1px solid 
 <p class="green"><i>Each synthesising type can put the subtitle in the bottom of the outside margin without video area overlay. Subtitle can be split into two type of content and each type of content can have different font and colour style, and can contains two lines of text, so the maximum number of line count in the external margin area is four lines of text.</i></p>
 
 
-<p><a href="https://itunes.apple.com/us/app/littlefox/id1459361351?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br>
+<p><a href="https://itunes.apple.com/us/app/littlefox/id1459361351?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br><br><br><br><br>
 <p>If you can't open the link above, please launch App Store and found LittleFox by searching.</p>
 
 <h2>Screenshot</h2>
