--- a/en/lyricsmaker.html
+++ b/en/lyricsmaker.html
@@ -40,7 +40,7 @@
 <section id="main_content" class="inner">
 
 
-<div class="smallscreen">
+<div class="mainscreen">
 <img src="../images/lyricsmaker/logo.png" style="width: 120px;" /><br>
 <h2>LyricsMaker <br><em>Version 1.2</em></h2>
 
@@ -50,7 +50,7 @@
 
 <p class="greenbig"><span class="strike0">It's free!</span></p>
 <p><a href="https://itunes.apple.com/us/app/lyricsmaker/id1411706886?ls=1&mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p>
-<br><br><br>
+<br><br><br><br><br><br>
 <p>If you can't open the link above, please launch App Store and found LyricsMaker by searching.</p>
 
 
