--- a/en/mathHelfer.html
+++ b/en/mathHelfer.html
@@ -37,14 +37,14 @@ lt {color:#cce619;}
 <section id="main_content" class="inner">
 
 
-<div class="smallscreen">
+<div class="mainscreen">
 <img src="../images/MathHelfer/logo.png" style="height: 110px;width:auto" /><br>
 <h2> MathHelfer <br><em> Version 1.0 </em></h2>
 
 <p><a href="http://www.sevenuc.com/en/MathHelfer.html">MathHelfer </a>is an ultra lightweight word processor help you write well formatted science article in a very light and efficient way without install huge software packages such as TEX and Office Suite.  As a rich text editor, MathHelfer can not only handle LaTeX math and equations but also can deal with common style and format tasks required by a normal word processor.</p>
 
 <div>
-<p><a href="https://apps.apple.com/us/app/mathhelfer/id1479973709?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br>
+<p><a href="https://apps.apple.com/us/app/mathhelfer/id1479973709?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br><br>
 <p>If you can't open the link above, please launch App Store and found MathHelfer by searching.</p>
 </div>
 
