--- a/en/powerreader.html
+++ b/en/powerreader.html
@@ -32,7 +32,7 @@
 <section id="main_content" class="inner">
 
 
-<div class="smallscreen">
+<div class="mainscreen">
 
 
 <video class="videobox" id="mainVideo" width="480" controls autoplay>
