--- a/en/reviewer.html
+++ b/en/reviewer.html
@@ -32,7 +32,7 @@
 <section id="main_content" class="inner">
 
 <h2></h2>
-<div class="smallscreen">
+<div class="mainscreen">
 <div style="max-width:470px;">
 
 <video class="videobox" id="mainVideo" width="268" height="480" controls autoplay>
