--- a/en/speare.html
+++ b/en/speare.html
@@ -34,7 +34,7 @@ table th, td { max-width:480px; text-align: left; padding:10px; border: 1px soli
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
 
-<div class="smallscreen">
+<div class="mainscreen">
 <img src="../images/speare/logo.png" style="height: 110px;width:auto" /><br>
 <!--h2>Speare Code Editor<br><em> Version 1.2.74 </em><br><em class="green">The free small IDE for scripting languages.</em></h2-->
 <div><pre class="green">
@@ -50,7 +50,7 @@ The free small IDE for scripting languages.
 
 
 <p class="greenbig">It's free!</p>
-<p><a href="https://apps.apple.com/us/app/speare/id1473902558?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a><br><br><br></p>
+<p><a href="https://apps.apple.com/us/app/speare/id1473902558?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a><br><br><br><br><br><br></p>
 
 <p>If you can't open the link above, please launch App Store and found Speare by searching.<br><br>
 <span class="green">Please kindly donate the author</span> by purchasing <a href="debugger.html" target="_blank">the pro version</a>, your donation will drive me to continually improve it, or please recommend this app on your blog or rate this app so that helping other people can more easily find it.</p>
