--- a/en/taihaa.html
+++ b/en/taihaa.html
@@ -38,7 +38,7 @@
 <section id="main_content" class="inner">
 
 
-<div class="smallscreen">
+<div class="mainscreen">
 <img src="../images/Taihaa/logo.png" style="width: 220px;"/><br>
 <h2>Taihaa<br><em>Version 1.2.2</em></h2>
 
