--- a/en/train.html
+++ b/en/train.html
@@ -32,7 +32,7 @@
 <section id="main_content" class="inner">
 
 
-<div class="smallscreen">
+<div class="mainscreen">
 
 <video class="videobox" id="mainVideo" width="400" height="234" controls autoplay>
 <source src="/videos/train.mp4" type="video/mp4">
