--- a/en/tts.html
+++ b/en/tts.html
@@ -33,6 +33,7 @@
 <!-- MAIN CONTENT -->
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
+<div class="mainscreen">
 
 <a href="../images/canto.png" target="_blank"><img src="../images/canto.png" class="screen"></a>
 
