--- a/en/tungsyu.html
+++ b/en/tungsyu.html
@@ -38,13 +38,13 @@
 <section id="main_content" class="inner">
 
 
-<div class="smallscreen">
+<div class="mainscreen">
 <img src="../images/Tungsyu/logo.png" style="width: 120px;" /><br>
 <h2> Tungsyu <br><em>Version 1.3 </em></h2>
 
 <p><b>Tungsyu「通書」</b> (The Calendar of Yangtze River), 是一個為提供農曆相關資訊查詢而特意開發的工具軟體。 該軟體提供農曆各個年份、月份、特定日子以及該日各個時辰的六十花甲天干、地支信息，以及星期、星座、五行屬性、值日星宿、十二建神、忌日、用時宜忌等信息，另外還特別包含二十四節氣交接的精準信息，精確到秒。 使用該工具可以非常方便地進行西曆和農曆的相互轉換和對照。開發該工具軟體以方便使用者進行農曆相關信息的便捷查詢。</p>
 
-<p><a href="https://itunes.apple.com/us/app/tungsyu/id1457444475?mt=12" target="_blank" class="appstore_download_link" ><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br>
+<p><a href="https://itunes.apple.com/us/app/tungsyu/id1457444475?mt=12" target="_blank" class="appstore_download_link" ><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br><br>
 <p>If you can't open the link above, please launch App Store and found Tungsyu by searching.</p>
 
 <p><img src="../images/Tungsyu/Yangtze_River.jpg" class="screenshots"/></p>
