--- a/en/uftp.html
+++ b/en/uftp.html
@@ -35,7 +35,7 @@
 <section id="main_content" class="inner">
 
 
-<div class="smallscreen">
+<div class="mainscreen">
 <img src="../images/uftp/logo.png" style="width: 160px;" /><br>
 <h2>uFTP Server <br><em>Version 1.0 </em></h2>
 
