--- a/en/bc.html
+++ b/en/bc.html
@@ -35,7 +35,7 @@
 <section id="main_content" class="inner">
 
 
-<div class="smallscreen">
+<div class="mainscreen">
 
 <video class="videobox" id="mainVideo" width="318" height="476" controls autoplay>
 <source src="/videos/chinese.mp4" type="video/mp4">
@@ -60,7 +60,7 @@
 <li> <a href="http://www.sevenuc.com/en/resources.html">Resources for learning Cantonese</a>.</li>
 </ol>
 
-<p>Download the wonderful Chinese language learning app on iTunes:<br> 
+<p>Download the wonderful Chinese language learning app on iTunes:<br> <br>
 <a class="appstore_download_link" href="https://itunes.apple.com/us/app/business-chinese/id1001182831?mt=8"></a>
 <br></p>
 <p><br><br></p>
