--- a/en/cantonese.html
+++ b/en/cantonese.html
@@ -31,7 +31,7 @@
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
 
-<div class="smallscreen">
+<div class="mainscreen">
 
 <video class="videobox" id="mainVideo" width="272" height="480" controls autoplay>
 <source src="/videos/hongkong.mp4" type="video/mp4">
