--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
 
-<div class="smallscreen">
+<div class="mainscreen">
 
 <div><pre class="green">
    ____
